expression dropdown fix issue with overflow hidden

--- a/src/app/components/analysis-panel/analysis-panel.component.scss
+++ b/src/app/components/analysis-panel/analysis-panel.component.scss
@@ -73,3 +73,10 @@
   overflow-y: auto;
 }
 
+.network-footer-toolbar{
+  .dropdown-menu{
+    z-index: $analysis-network-toolbar-dropdown-z;
+  }
+}
+
+
