--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,6 +1,15 @@
 $row-data-selector-height: auto;
 $network-header-height: 3rem;
 $network-footer-height: 4rem;
+$network-footer-inner-container-height: 25rem;
+$network-footer-space-button-to-border: 0.5rem;
+
+$explorer-network-z: 10;
+$explorer-network-toolbar-dropdown-z: 20;
+
+$analysis-view-z: 30;
+$analysis-network-z: 40;
+$analysis-network-toolbar-dropdown-z: 50;
 
 $analysis-tab-header-height: 2.5rem;
 $analysis-tab-header-padding: 1.5rem;
